# mark-preview

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPEC.md
.github/workflows/: release.yml
assets/: app.js  template.html
cmake/: EmbedAssets.cmake  EmbeddedAssetsTable.h.in  embed_asset.py
packaging/: mark-preview.desktop
packaging/aur/: PKGBUILD
samples/: demo.md
scripts/: fetch-assets.sh  test-render.sh
src/: MainFrame.cpp  MainFrame.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Theme.cpp  Theme.h  Watcher.cpp  Watcher.h  main.cpp  render_tool.cpp
